# bridgy-intersight-llm-demo

./: .env.example  .env_example  .gitignore  Dockerfile  README.md  bridgy-main-debug.yaml  debug-pod.yaml  docker-compose.yml  docker_run.sh  entrypoint.sh  install.sh  local_build_install.sh  prompts.txt  uninstall.sh
bridgy-api/: Dockerfile  ReadMe.md  main.py  requirements.txt
bridgy-frontend/: Dockerfile  build.sh  nginx.conf  openshift.yaml
bridgy-main/: .env.template  Dockerfile  config.py  entrypoint-patch-configmap.yaml  entrypoint.sh  fix_mongo.py  main.py  mongodb_fix.py  optimized_init.sh  requirements.txt  verify_imports.py
bridgyv2-main/: .gitignore  .replit  README.md  config.py  gpurequirements.txt  intersight_secret_key.pem  main.py  pyproject.toml  replit.nix  requirements.txt
bridgyv2-main/.streamlit/: config.toml
bridgyv2-main/docs/: nexus_dashboard_integration.md
bridgyv2-main/experts/: ai_pods_expert.py  general_expert.py  infrastructure_expert.py  intersight_expert.py  nexus_dashboard_expert.py  router.py
bridgyv2-main/tools/: infrastructure_api.py  intersight_api.py  nexus_dashboard_api.py  pdf_loader.py
bridgyv2-main/utils/: styling.py
dockerdeploy/: deploy_bridgy_docker.sh  docker-compose.yml
kubedeploy/: bridgy-api-deploymentconfig.yaml  bridgy-api-service.yaml  bridgy-main-claim0-persistentvolumeclaim.yaml
osdeploy/: DEPLOYMENT-INTEGRATION.md  README.md  bridgy-api-buildconfig.yaml  bridgy-api-cm1-configmap.yaml  bridgy-api-deploymentconfig.yaml  bridgy-api-imagestream.yaml  bridgy-api-route.yaml  bridgy-main-route.yaml  (+35 more)
(+59 files in other folders)
